prometheus (1.7.1+ds-4) UNRELEASED; urgency=medium

  * debian/watch: More robust rules; accept more pre-releases.

 -- Martín Ferrari <tincho@debian.org>  Wed, 20 Sep 2017 09:27:14 +0000

prometheus (1.7.1+ds-3) unstable; urgency=medium

  * Add patch to work with latest azure-go-autorest package.
  * Move adduser to normal Depends.
  * debian/control: Remove all non-direct dependencies.

 -- Martín Ferrari <tincho@debian.org>  Tue, 05 Sep 2017 01:46:43 +0000

prometheus (1.7.1+ds-2) unstable; urgency=medium

  * Update versioned dependency on -common.
  * Remove now unneeded lintian overrides.
  * Replace dpkg-parsechangelog with /usr/share/dpkg/pkg-info.mk
  * debian/control: Update Standards-Version (no changes).
  * debian/rules: Replace DH_GOPKG with XS-Go-Import-Path.
  * Automatic fixes to control and copyright from cme.

 -- Martín Ferrari <tincho@debian.org>  Tue, 29 Aug 2017 00:17:30 +0000

prometheus (1.7.1+ds-1) unstable; urgency=medium

  * New upstream release.
  * Refresh patches, delete now unneeded 07-New_common_compat.patch.
  * Add new dependencies.
  * Update debian/changelog to reflect removed dependencies.

 -- Martín Ferrari <tincho@debian.org>  Fri, 04 Aug 2017 08:08:16 +0000

prometheus (1.6.3+ds2-1) unstable; urgency=high

  * Add patch to handle properly old-style graph URLs, which are used by the
    Debian version of Grafana.
  * Only depend on daemon if systemd-sysv is not installed.
  * Use dh-systemd to properly enable systemd service.
  * debian/default: Update description of flags. Closes: #870147.
  * Repack upstream source:
    - Remove now unneeded influxDB vendored deps.
    - Remove all remaining vendored dependencies & use Debian packages.
      Closes: #851817.
  * Backport commit 4d9b917 to solve build failure. Closes: #868943.
    Increasing urgency as it is an RC bug.
  * Remove gen-orig-tgz target, replace with gbp configuration.
  * Renumber patches.
